Prevent button shadow clipping in the "Path" panel

--- a/src/app/expandable/expandable.component.scss
+++ b/src/app/expandable/expandable.component.scss
@@ -28,5 +28,7 @@ div.title {
 
 .panel {
     transition: max-height 200ms;
-    overflow:hidden;
+}
+.ng-animating {
+    overflow: hidden;
 }
